<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:fontFamily="@font/mmrtextb"
            android:layout_gravity="center"
            android:textSize="25sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/specify_email"
        android:textSize="18sp"
        android:fontFamily="@font/mmrtextb"/>
    <EditText
        android:id="@+id/account_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:fontFamily="@font/mmrtextb"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/sendEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:background="@color/colorAccent"
            android:fontFamily="@font/mmrtextb"
            android:textAllCaps="false"
            android:text="@string/send_email" />
        <Button
            android:id="@+id/f_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:background="@color/colorAccent"
            android:fontFamily="@font/mmrtextb"
            android:textAllCaps="false"
            android:text="@string/log_in" />
    </LinearLayout>
    </LinearLayout>

</RelativeLayout>