<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

        <TextView
            android:id="@+id/YourShiftDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:text="@string/your_shift_is_highlighted"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/mmrtextb"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/YourColleaguesShiftDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_below="@id/YourShiftDescription"
            android:text="@string/your_colleagues_shifts"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/mmrtextb"
            android:textSize="18sp" />
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/YourColleaguesShiftDescription"
        android:id="@+id/calendar_daily_view">
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <com.theogapplepie.mywalmartschedule.CustomDayView
                android:id="@+id/ccdv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </ScrollView>
    </HorizontalScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/calendar_daily_view">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TodaysShift"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/tShiftTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/shift_for_the_day"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/mmrtextb"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tShiftSetter"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:text=""
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/mmrtextb"
                android:textSize="18sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/tBreakEstimate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TodaysShift"
            android:text="@string/your_break_is_estimated_to_be"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/mmrtextb"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/First15"
            android:layout_below="@id/tBreakEstimate"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/tB1Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/fifteen_min"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/mmrtextb"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tB1Setter"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/mmrtextb"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Meal"
            android:layout_below="@id/First15"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/tMealTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/meal"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/mmrtextb"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tMealSetter"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/mmrtextb"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Final15"
            android:layout_below="@id/Meal"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/tB3Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/fifteen_min"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/mmrtextb"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tB3Setter"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/mmrtextb"
                android:textSize="18sp" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>