<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp">

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_shifts_fragment_insight"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/mmrtextb"
        android:textSize="18sp" />

    <CalendarView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/description"
        android:id="@+id/calendar">

    </CalendarView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/calendar">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TodaysShift"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/shift_for_the_day"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/mmrtextb"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/myShiftsSetter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/mmrtextb"
                android:textSize="18sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/BreakEstimate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TodaysShift"
            android:text="@string/your_break_is_estimated_to_be"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/mmrtextb"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/First15"
            android:layout_below="@id/BreakEstimate"
            android:layout_centerHorizontal="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/fifteen_min"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/mmrtextb"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/MB1Setter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/mmrtextb"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Meal"
            android:layout_below="@id/First15"
            android:layout_centerHorizontal="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/meal"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/mmrtextb"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/MMealSetter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/mmrtextb"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Final15"
            android:layout_below="@id/Meal"
            android:layout_centerHorizontal="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/fifteen_min"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/mmrtextb"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/MB3Setter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/mmrtextb"
                android:textSize="18sp" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>